# reddit-md-post

./: .env.example  .gitignore  .last-run  .pdm-python  README.md  aggregate_rss.py  post_to_reddit.py  pyproject.toml
.github/workflows/: daily-aggregate.yml  weekly-digest.yml
classifier/: benchmark_classifiers.py  benchmark_embeddings.py  benchmark_gliclass.py  infer.py  label.py  train.py
data/: classifier_eval.json  classifier_head.joblib  feed-2025-02-20.md  feed-2025-02-21.md  feed-2025-02-22.md  feed-2025-02-23.md  feed-2025-02-24.md  feed-2025-02-25.md  feed-2026-02-26.md  feed-2026-02-27.md  feed-2026-02-28.md  feed-2026-03-01.md  feed-2026-03-02.md  feed-2026-03-03.md  feed-2026-03-04.md  feed-2026-03-05.md  feed-2026-03-06.md  feed-2026-03-07.md  feed-2026-03-08.md  feed-2026-03-09.md  feed-2026-03-10.md  feed-2026-03-11.md  feed-2026-03-12.md  feed-2026-03-13.md  feed-2026-03-14.md  feed-2026-03-15.md  feed-2026-03-16.md  feed-2026-03-17.md  feed-2026-03-18.md  feed-2026-03-19.md  feed-2026-03-20.md  feed-2026-03-21.md  feed-2026-03-22.md  feed-2026-03-23.md  feed-2026-03-24.md  feed-2026-03-25.md  feed-2026-03-26.md  feed-2026-03-27.md  feed-2026-03-28.md  feed-2026-03-29.md  (+133 more)
src/: post_to_reddit.py
src/rss_summary/: aggregate.py  classification.py  formatting.py  last_run.py  (+4 more)
src/rss_summary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_aggregate.py  test_classification.py  test_formatting.py  test_last_run.py  test_markdown_generation.py  test_parsing.py  test_similarity.py  test_weekly.py
