[project]
name = "rss_summary"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "prmlnk", email = "peroumal@hey.com"},
]
dependencies = ["feedparser>=6.0.12", "datetime>=6.0", "sentence-transformers>=5.2.2", "py-markdown-table>=1.3.0", "bs4>=0.0.2", "click>=8.3.1", "praw>=7.8.1", "playwright>=1.58.0", "dotenv>=0.9.9", "pyotp>=2.9.0", "requests>=2.32.5", "pathlib>=1.0.1"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
aggregate-rss = "rss_summary.aggregate:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
